tests/lean/1749.lean
import data.vector
open vector

example (u : vector ℕ 2) : vector ℕ 2 :=
let [u1, u2] := u in
u
